# rad

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: cmake.yml  doxygen.yml
conf/: .pylintrc  make_docs.bat  make_docs.sh  rad.h.cnf  rad.py.cnf  rad_doxy.cnf
crad/include/: cross_comp.h  grid_t.h  logger.h  pmap_t.h  rad_conf.h  rad_setup.h  rad_specs.h  rad_types.h
crad/src/: cross_comp.c  grid_t.c  mcont.c  msol.c  pardep.c  pmap_t.c  rad_setup.c  rad_specs.c  rad_types.c
data/: main.prm  pardep.prm
prad/: rad.org  rad.py  rad_conf.py
